--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,14 @@
     "editor.defaultFormatter": "tamasfe.even-better-toml"
   },
   "npm.exclude": "**/lib/**",
-  "solidity.formatter": "forge"
+  "solidity.formatter": "forge",
+  "woke.compiler.solc.remappings": [
+    "@prb/test/=lib/prb-test/src/",
+    "forge-std/=lib/forge-std/src/",
+    "@uniswap/v4-core/=lib/v4-periphery/lib/v4-core/",
+    "@uniswap-periphery/v4-periphery/=lib/v4-periphery/",
+    "src/=src/",
+    "@aave/v3-core/=lib/aave-v3-core/contracts/",
+    "@aave/v3-periphery/=lib/aave-v3-periphery/contracts/"
+  ]
 }
