add: files and periphery

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
     "@uniswap-periphery/v4-periphery/=lib/v4-periphery/",
     "src/=src/",
     "@aave/v3-core/=lib/aave-v3-core/contracts/",
-    "@aave/v3-periphery/=lib/aave-v3-periphery/contracts/"
+    "@aave/v3-periphery/=lib/aave-v3-periphery/contracts/",
+    "@openzeppelin/=lib/openzeppelin-contracts/"
   ]
 }
