forge install: v4-core

--- a/.gitmodules
+++ b/.gitmodules
@@ -21,3 +21,6 @@
 [submodule "lib/gho-core"]
 	path = lib/gho-core
 	url = https://github.com/aave/gho-core
+[submodule "lib/v4-core"]
+	path = lib/v4-core
+	url = https://github.com/Uniswap/v4-core
