--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
   },
   "npm.exclude": "**/lib/**",
   "solidity.formatter": "forge",
-  "woke.compiler.solc.remappings": [
+  "wake.compiler.solc.remappings": [
     "@prb/test/=lib/prb-test/src/",
     "forge-std/=lib/forge-std/src/",
     "@uniswap/v4-core/=lib/v4-periphery/lib/v4-core/",
